# amigo

./: .gitignore
etc/lang/: mdi_ru.qm  mdi_uk.qm  viewer4_ru.qm  viewer4_ua.qm
etc/prot/sql/: 01.sql  02.sql  03.sql  04.sql  05.sql  06.sql  07.sql  08.sql  09.sql  10.sql  11.sql  12.sql  14.sql  15.sql  16.sql  17.sql  schedule.sql
etc/visual/predefpws/: trendpw.xml
src/: CMakeLists.txt
src/core/: amigofs.h  amodule.h  amsync.h  amtree.h  backtrace.hpp  baseprojparser.h  modiface.h  monotone_timer.hpp  tag.cpp  tag.h  visiface.h
src/core/protocols/: votlis.h
src/main/: CMakeLists.txt  jamroot.jam  main.cpp
src/net/: CMakeLists.txt  jamroot.jam
src/net/connection/: inputconnection.h  inputethernetconnection.h  inputserialconnection.h  outputconnection.h  outputethernetconnection.cpp  outputethernetconnection.h
src/net/drivers/: jamroot.jam
src/net/drivers/input/: CMakeLists.txt  inputdriver.h  jamroot.jam  votlis.cpp  votlis.h
src/net/drivers/output/: CMakeLists.txt  jamroot.jam
src/net/drivers/output/byrt/: CMakeLists.txt  byrt.cpp  byrt.h  confparser.h  jamroot.jam  protocol.h
src/net/drivers/output/core/: outputdriverbase.h
src/net/drivers/output/swap/: CMakeLists.txt  jamroot.jam  swap.cpp
src/net/engine/: CMakeLists.txt  engine.cpp  engine.h  entries.cpp  entries.h  init.cpp  init.h  inputdevice.cpp  inputdevice.h  jamroot.jam  netmodule.h  outputdevice.h  tools.h
src/net/js/: CMakeLists.txt  jamroot.jam  js.cpp
src/net/opccl/: CMakeLists.txt  opccl.cpp  opcclconf.cpp  opcclconf.h  opcclconfparser.cpp  opcclconfparser.h  opcmodiface.cpp  opcmodiface.h
src/net/votlis_rmt/: CMakeLists.txt  jamroot.jam  linker.h  tagconf.cpp  tagconf.h  votlis_rmt.cpp  votlismaster.cpp  votlismaster.h  votlisprotocol.h
src/prot/: CMakeLists.txt  basesaver.h  compile.h  configdata.cpp  configdata.h  configreader.h  jamroot.jam  mysqldriver.cpp  mysqldriver.h  prot.cpp  servicepath.h  xmlconfigreader.cpp  xmlconfigreader.h
src/qt/: CMakeLists.txt
src/qt/core/: qtetcfs.cpp  qtetcfs.h  qtprojfs.h
src/qt/qtapp/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp  projman.ui  qtapp.pro
src/tools/converter/: jamroot.jam  main.cpp
